--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -15,7 +15,7 @@ body, html {
 	background-repeat: no-repeat; 
 	color: #0b2139;
 	font-family: 'Raleway', sans-serif;
-	font-size:16px;
+	font-size:15px;
 }
 
 .main-content a { color: #fc8433; cursor: pointer; } 
@@ -24,7 +24,7 @@ body, html {
 
 body, html {   height: 100%; margin-bottom:-120px; padding-bottom:76px;  }
 
-header { height:120px !important; padding:24px 24px 0px 24px;  }
+header { height:80px !important; padding:12px 24px 0px 24px;  }
 
 .container.body { 
 	display: table;
@@ -39,9 +39,9 @@ header { height:120px !important; padding:24px 24px 0px 24px;  }
 .row.main-row { height:100%; display: table-row; }
 
 .login_logo { 	margin-bottom:24px; }
-.singup_logo { max-width:96px; height:auto; margin-bottom:24px;}
-.signup-title { font-weight:300; padding-left: 24px; border-left: 1px solid #fff; color:#fff; float:left; margin-top:24px; }
-.navbar-right { margin-top:24px; }
+.singup_logo { max-width:60px; height:auto; margin-bottom:24px;}
+.signup-title { font-weight:200; font-size: 24px; padding-left: 24px; border-left: 1px solid #fff; color:#fff; float:left; }
+.navbar-right { margin-top:0px; }
 
 .container-fluid {
     margin: 0 auto;
@@ -72,7 +72,7 @@ body.nav-md .container.body .right_col { float: none; display: table-cell; verti
 
 .nav .open>a.user-profile, .nav .open>a.user-profile:focus, .nav .open>a.user-profile:hover { color: #0b2139 !important; width: 62px; }
 
-.page-title h1 {  padding:0px 12px 12px 12px; }
+.page-title h1 {  padding:0px 6px 6px 6px; font-size: 24px; }
 .page-title h1, .page-title h2, .page-title h3, .page-title h1 small { color:#fc8333;  } 
 
 .page-info { padding:12px; }
@@ -102,31 +102,33 @@ body.nav-md .container.body .right_col { float: none; display: table-cell; verti
 
 .signup-step .btn.btn-app .fa { font-size: 36px; }
 
-.bad input:focus {
+.form-warning input:focus { border : 1px solid #cf5b11 !important; }
+input:focus { border : 1px solid #276bb6 !important; }
+
+.form-warning .form-control {
 	border : 1px solid #fc8433 !important;
 }
-input:focus {
-	border : 1px solid #276bb6 !important;
+.input-group.form-warning + label.form-warning {
+	display:block;
 }
-.bad input {
-	border : 1px solid #A2A7A8 !important;
-}
-.bad .form-label {
-	background: #A2A7A8;
-}
-
-.form-control:focus + .form-label { background: #fc8433 !important; } 
-
-.form-label { 
+label.form-warning { 
 	padding:4px 8px; font-size:12px; margin-top:0px;
 	border-radius: 0px 0px 6px 6px;
 	-moz-border-radius: 0px 0px 6px 6px;
 	-webkit-border-radius: 0px 0px 6px 6px;
 	color:#fff;
-	margin-top:-1px;
-	display:block;
- }
-
+	margin-top:-10px;
+	display:none;
+	width: 100% !important;
+	z-index: 99;
+	background:#fc8433;
+}
+.input-group {
+	width:100% !important;
+}
+textarea {
+    resize: none;
+}
  
     @media only screen and (min-width : 768px) {
 		
