--- a/views/external.ejs
+++ b/views/external.ejs
@@ -27,6 +27,10 @@
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<!-- Angular JS -->
+	<script src="/node_modules/es6-shim/es6-shim.min.js"></script>
+	<script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
+    <script src="/node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>   
+	
 	<script src="/node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
 	<script src="/node_modules/systemjs/dist/system.js"></script>
 	<script src="/node_modules/rxjs/bundles/Rx.min.js"></script>
