sign up - forms refactoring

--- a/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
+++ b/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
@@ -1,8 +1,10 @@
 <form [ngFormModel]="getDefaultControlGroup()" (submit)="resetPassword()">
 	<h1>{{ "Reset Password" | translate }}</h1>
-	<div [ngClass]="{bad: controlIsInvalid('email')}" class="form-group">
-		<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
-		<label *ngIf="controlIsInvalid('email')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
+	<div class="form-group">
+		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
+			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+		</div>
+		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 	</div>
 	<div>
 		<loading-button [isLoading]="isLoading" title="Reset Password"></loading-button>
