--- a/assets/client/src/pages/external/pages/update-password/template/update-password-component.html
+++ b/assets/client/src/pages/external/pages/update-password/template/update-password-component.html
@@ -1,12 +1,16 @@
 <form [ngFormModel]="getDefaultControlGroup()" (submit)="updatePassword()">
 	<h1>{{ "Update Password" | translate }}</h1>
-	<div [ngClass]="{bad: controlIsInvalid('password')}"  class="form-group">
-		<input type="password" class="form-control" placeholder="{{ 'New Password' | translate }}" ngControl="password" />
-		<label *ngIf="controlIsInvalid('password')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'At least 6 characters, 1 number and 1 upper case' | translate }}</small></label>
+	<div class="form-group">
+		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('password')}">
+			<input type="password" class="form-control" placeholder="{{ 'New Password' | translate }}" ngControl="password" />
+		</div>
+		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'At least 6 characters, 1 number and 1 upper case' | translate }}</small></label>
 	</div>
-	<div [ngClass]="{bad: confirmationControlIsInvalid('passwordConfirmation', 'password')}" class="form-group">
-		<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" ngControl="passwordConfirmation" />
-		<label *ngIf="confirmationControlIsInvalid('passwordConfirmation', 'password')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'The passwords should match' | translate }}</small></label>
+	<div class="form-group">
+		<div class="input-group" [ngClass]="{'form-warning': confirmationControlIsInvalid('passwordConfirmation', 'password')}">
+			<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" ngControl="passwordConfirmation" />
+		</div>
+		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'The passwords should match' | translate }}</small></label>
 	</div>
 	<div>
 		<loading-button [isLoading]="isLoading" title="Update Password"></loading-button>
