--- a/assets/client/src/pages/external/main/template/main-layout-external.html
+++ b/assets/client/src/pages/external/main/template/main-layout-external.html
@@ -1,5 +1,5 @@
 <div class="container-fluid wrapper">
-	<div class="col-sm-4 col-sm-offset-4">
+	<div class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 col-sm-10 col-sm-offset-1">
 		<div id="login" class="animate form">
 			<img src="/client/static-assets/images/unit_pal_logo.png" class="login_logo center-block" alt="" />
 			<section class="login_content content-box">
