--- a/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
+++ b/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
@@ -1,12 +1,16 @@
 <form [ngFormModel]="getDefaultControlGroup()" (submit)="logIn()">
 	<h1>{{ "Login to " | translate }} UnitPal</h1>
-	<div [ngClass]="{bad: controlIsInvalid('email')}" class="form-group">
-		<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
-		<label *ngIf="controlIsInvalid('email')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Insert your email' | translate }}</small></label>
+	<div class="form-group">
+		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
+			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+		</div>
+		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert your email' | translate }}</small></label>
 	</div>
-	<div [ngClass]="{bad: controlIsInvalid('password')}" class="form-group">
-		<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" ngControl="password" />
-		<label *ngIf="controlIsInvalid('password')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Insert your password' | translate }}</small></label>
+	<div class="form-group">
+		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('password')}">
+			<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" ngControl="password" />
+		</div>
+		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert your password' | translate }}</small></label>
 	</div>
 	<div>
 		<loading-button [isLoading]="isLoading" title="Log In"></loading-button>
