--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -5,27 +5,29 @@
 			<h3>{{ 'Select the default currency' | translate }}  </h3>
 			<small>{{ 'This will be used across all your Price Products, Add On Products and Invoices' | translate }}</small>
 		</label>
-		<div class="form-group" [ngClass]="{bad: !hotel.ccyCode && didSubmitForm}">
-			<select class="form-control" [ngModel]="hotel.ccyCode" (change)="didChangeCurrencyCode($event.target.value)">
-				<option *ngFor="#currency of currencies.currencyList" [value]="currency.code">{{currency.code}} - {{currency.name}}</option>
-			</select>
-			<label *ngIf="!hotel.ccyCode && didSubmitForm" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Select a currency' | translate }}</small></label>
+		<div class="form-group">
+			<div class="input-group" [ngClass]="{'form-warning': (!hotel.ccyCode && didSubmitForm)}">
+				<select class="form-control" [ngModel]="hotel.ccyCode" (change)="didChangeCurrencyCode($event.target.value)">
+					<option *ngFor="#currency of currencies.currencyList" [value]="currency.code">{{currency.code}} - {{currency.name}}</option>
+				</select>
+			</div>
+			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select a currency' | translate }}</small></label>
 		</div>
 
 		<hr>
 
 		<label class="control-label">Payment Methods</label>
-		<div class="well">
-			<ul class="list-group checked-list-box">
-				<div class="checkbox" *ngFor="#paymentMethodVM of paymentMethods.paymentMethodList">
-					<label>
-						<input type="checkbox" [(ngModel)]="paymentMethodVM.isSelected"><i class="fa" [ngClass]="paymentMethodVM.paymentMethod.iconUrl"></i> {{paymentMethodVM.paymentMethod.name}}
-					</label>
-				</div>
-			</ul>
-			<div class="form-group" [ngClass]="{bad: !didSelectPaymentMethod()&&didSubmitForm}">
-				<label *ngIf="!didSelectPaymentMethod() && didSubmitForm" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method' | translate }}</small></label>
+		<div class="well form-group">
+			<div class="input-group" [ngClass]="{'form-warning': (!didSelectPaymentMethod()&&didSubmitForm)}">
+				<ul class="list-group checked-list-box">
+					<div class="checkbox" *ngFor="#paymentMethodVM of paymentMethods.paymentMethodList">
+						<label>
+							<input type="checkbox" [(ngModel)]="paymentMethodVM.isSelected"><i class="fa" [ngClass]="paymentMethodVM.paymentMethod.iconUrl"></i> {{paymentMethodVM.paymentMethod.name}}
+						</label>
+					</div>
+				</ul>
 			</div>
+			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a payment method' | translate }}</small></label>
 		</div>
 
 	</div>
