implemented breakfast category

--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -19,6 +19,7 @@
 <div class="col-sm-9 singleview-right" *ngIf="isEditing">
 	<add-on-product-edit
 		*ngIf="selectedAddOnProductVM" 
+		[filteredCategory]="filteredCategory"
 		[addOnProductVM]="selectedAddOnProductVM"
 		(onExit)="showViewScreen()">
 	</add-on-product-edit>
