--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
@@ -6,7 +6,7 @@
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
 					<input type="text" class="form-control" placeholder="{{ 'Product Name' | translate }}" ngControl="name">
 				</div>
-				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the add-on product' | translate }}</small></label>
+				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the product' | translate }}</small></label>
 			</div>
 		</div>
 		<div class="row">
