--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -8,6 +8,7 @@
 		<div class="form-group">
 			<div class="input-group" [ngClass]="{'form-warning': (!hotel.ccyCode && didSubmitForm)}">
 				<select class="form-control" [ngModel]="hotel.ccyCode" (change)="didChangeCurrencyCode($event.target.value)">
+					<option value="" disabled>{{ 'Select a currency' | translate }}</option>
 					<option *ngFor="#currency of currencies.currencyList" [value]="currency.code">{{currency.code}} - {{currency.name}}</option>
 				</select>
 			</div>
