room categories modal

--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -40,7 +40,7 @@
 		</thead>
 		<tbody>
 			<tr *ngFor="#item of itemList" [ngClass]="{active: (isSelected(item) && tableOptions.canSelect)}">
-				<td *ngFor="#columnMeta of columnMetaList" (click)="tableOptions.canSelect && didSelectItem(item)">
+				<td *ngFor="#columnMeta of columnMetaList" (click)="tableOptions.canSelect && didSelectItem(item)" [ngClass]="{'selectable-row': tableOptions.canSelect}">
 					<span *ngIf="isPercentage(columnMeta.valueMeta)">
 						{{ getItemValue(item, columnMeta.valueMeta) | percentage }}
 					</span>
