--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -262,3 +262,18 @@ input[type="number"].form-control {
 .img-responsive {
 	width: 100%;
 }
+
+.modal .modal-body {
+	max-height: 70vh;
+	overflow:auto;
+	overflow-x:hidden;
+}
+.selectable-row {
+	cursor: pointer;
+}
+.modal a {
+	color: #fc8433;
+}
+.modal a:hover {
+	color: #cf5b11;
+}
